Fix german legacy config

--- a/src/main/resources/de_DE_legacy.yml
+++ b/src/main/resources/de_DE_legacy.yml
@@ -138,7 +138,7 @@ items:
     material: ARROW
   filler:
     name: ''
-    material: GRAY_STAINED_GLASS_PANE
+    material: STAINED_GLASS_PANE:7
   next:
     name: '&eWeiter'
     material: FEATHER
@@ -164,7 +164,7 @@ menus:
       storage_size:
         #Placeholders: %amount%
         name: '&a%amount%&7 Lagerplätze'
-        material: WRITABLE_BOOK
+        material: BOOK_AND_QUILL
       buy_shop:
         material: EMERALD
         name: '&aKaufe diesen Shop!'
@@ -180,7 +180,7 @@ menus:
     items:
       #Edit items for sale item
       edit_shopfront:
-        material: WRITABLE_BOOK
+        material: BOOK_AND_QUILL
         name: '&bShop bearbeiten'
         lore:
         - '&7Klicke, um die in deinem Shop zum'
@@ -199,7 +199,7 @@ menus:
         - '&7Klicke, um dein Lager zu bearbeiten.'
       #Edit villager item
       edit_villager:
-        material: VILLAGER_SPAWN_EGG
+        material: MONSTER_EGG
         name: '&eDorfbewohner bearbeiten'
         lore:
         - '&7Klicke, um den Beruf des'
@@ -420,7 +420,7 @@ menus:
     title: '&8Dorfbewohner bearbeiten'
     #This requires citizens to be on the server
     citizens_item:
-      material: PLAYER_HEAD
+      material: SKULL_ITEM
       name: '&eSet skin instead'
       lore:
       - '&7Click to set player skin for this shop'
@@ -429,7 +429,7 @@ menus:
         material: IRON_CHESTPLATE
         name: '&7Rüstungsschmied'
       butcher:
-        material: PORKCHOP
+        material: PORK
         name: '&cMetzger'
       cartographer:
         material: MAP
@@ -468,7 +468,7 @@ menus:
         material: IRON_SWORD
         name: '&7Waffenschmied'
       none:
-        material: VILLAGER_SPAWN_EGG
+        material: MONSTER_EGG
         name: '&cArbeitsloser'
       #Legacy versions
       blacksmith:
@@ -483,11 +483,11 @@ menus:
     title: '&8Bist du dir sicher?'
     items:
       no_cancel:
-        material: RED_TERRACOTTA
+        material: STAINED_CLAY:14
         name: '&cNein, abbrechen.'
       #If the Shop is reusable (created by command)
       yes_sell:
-        material: LIME_TERRACOTTA
+        material: STAINED_CLAY:5
         name: '&aJa, Shop verkaufen.'
         #Placeholders: %amount%
         lore:
@@ -497,7 +497,7 @@ menus:
         - '&7verkaufst/aufgibst.'
       #If the Shop isn't reusable (created using a spawn egg)
       yes_remove:
-        material: LIME_TERRACOTTA
+        material: STAINED_CLAY:5
         name: '&aJa, Shop verkaufen.'
         lore:
         - '&7Dadurch wird der VillagerShop'
@@ -525,7 +525,7 @@ menus:
     
     items:
       mode:
-        material: OAK_SIGN
+        material: SIGN
         name: '&eModus&7: %mode%'
         #%cycle% is replaced with cycle values above
         lore:
@@ -564,7 +564,7 @@ menus:
         lore:
         - '&7Klicke, um zu bearbeiten'
       player_limit:
-        material: PLAYER_HEAD
+        material: SKULL_ITEM
         name: '&eSpielerlimit&7: &f%limit%'
         lore:
         - '&7>> Rechtsklick zum umschalten:'
@@ -572,7 +572,7 @@ menus:
         - ''
         - '&7>> Linksklick, um zu bearbeiten'
       limit_cooldown:
-        material: CLOCK
+        material: WATCH
         name: '&eAbklingzeit&7: &f%cooldown%'
         lore:
         - '&7Nächster Reset: &e%next%'
@@ -583,10 +583,10 @@ menus:
     title: '&8Bist du dir sicher?'
     items:
       accept:
-        material: GREEN_TERRACOTTA
+        material: STAINED_CLAY:5
         name: '&aJa, bestätigen.'
       cancel:
-        material: RED_TERRACOTTA
+        material: STAINED_CLAY:14
         name: '&cNein, abbrechen.'
   
   
@@ -597,7 +597,7 @@ menus:
 #----------------- Villager Shop Item settings -----------------#
 
 shop_item:
-  material: VILLAGER_SPAWN_EGG
+  material: MONSTER_EGG
   name: '&b&lVillagerShop erstellen!'
   #Placeholders: %shop_size%, %storage_size%
   lore:
