--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
         <!-- NBTAPI -->
         <dependency>
             <groupId>de.tr7zw</groupId>
-            <artifactId>item-nbt-api</artifactId>
+            <artifactId>item-nbt-api-plugin</artifactId>
             <version>2.10.0</version>
             <scope>provided</scope>
         </dependency>
