--- a/src/main/resources/en_US.yml
+++ b/src/main/resources/en_US.yml
@@ -105,7 +105,7 @@ messages:
   type_skin: "&bPlease type the skin name in the chat..."
   skin_set: "&aSkin successfully set."
   no_expired_storage: "&cYou have no expired storage!"
-  type_limit_cooldown: "&bPlease type the limit cooldown in chat (m/h/d) or 'never' for no limit..."
+  type_limit_cooldown: "&bPlease type the limit cooldown in chat (2h, 1d, etc.) or 'never' for no limit..."
   limit_cooldown_set: "&aTrade limit cooldown set to &e%time%"
   limits_cleared: "&cLimits cleared!"
   name_blacklisted: "&cYou are not allowed to use this shop name!"
@@ -120,6 +120,11 @@ messages:
   bought_item_as_customer: "&7You bought &b%amount%x %item%&7 for &a%price%&7 from &r%shop%."
   #Placeholders: %amount%, %item%, %price%, %shop%
   sold_item_as_customer: "&7You sold &b%amount%x %item%&7 for &a%price%&7 to &r%shop%."
+  type_discount: "&bPlease type the discount (0-100) in the chat..."
+  type_time: "&bPlease type the time (2h, 1d, etc.) in the chat..."
+  not_valid_time: "&cNot a valid time! Time must start with a number and end with h, d, or m."
+  #Placeholders: %shop_name%, %discount%, %item%
+  discount_announcement: "&e%shop_name% &adoes now have a &e%discount%% &adiscount on &e%item%&a!"
 
 stats_message:
   - "&bVillagerShop stats:"
@@ -262,6 +267,10 @@ menus:
       buy_and_sell: "&8[&aBUY&7/&aSELL&8]"
       command: "&8[&eCOMMAND&8]"
       trade: "&8[&eTRADE&8]"
+    discount_lore:
+      - ""
+      - "&7Discount&f: &e%discount%%"
+      - "&7Discount ends in&f: &e%time%"
     player_shop:
       #Placeholders: %amount%, %price%, %stock%, %mode%
       trade_lore:
@@ -577,7 +586,7 @@ menus:
         material: FEATHER
         name: "&eBuy Limit&7: %limit%"
         lore:
-          - "&7Click to edit"
+          - "&7>> Click to edit"
       player_limit:
         material: PLAYER_HEAD
         name: "&ePlayer Limit&7: &f%limit%"
@@ -594,6 +603,13 @@ menus:
           - ""
           - "&7>> Left click to edit cooldown"
           - "&7>> Right click to &cclear &7limits"
+      discount:
+        material: EMERALD
+        name: "&eDiscount&7: &f%discount%%"
+        lore:
+          - "&7Ends: &e%discount_end%"
+          - ""
+          - "&7>> Click to edit"
   confirm_action:
     title: "&8Are you sure?"
     items:
